<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_alignParentTop="true" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableRow>

                <TextView
                    android:id="@+id/MortgageAmountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MortgageAmountText" >
                </TextView>

                <EditText
                    android:id="@+id/MortgateAmountEditText"
                    android:layout_width="85dip"
                    android:layout_height="wrap_content"
                    android:hint="0"
                    android:imeOptions="actionNext"
                    android:numeric="decimal" >
                </EditText>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/DownPaymentText"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/DownPaymentText" >
                </TextView>

                <EditText
                    android:id="@+id/DownPaymentEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="0"
                    android:imeOptions="actionNext"
                    android:numeric="decimal" >
                </EditText>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/PercentageText"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/PercentageText" >
                </TextView>

                <EditText
                    android:id="@+id/PercentageEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:numeric="decimal" >
                </EditText>

                <TextView
                    android:id="@+id/PrincipalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="@string/PrincipalText" >
                </TextView>

                <TextView
                    android:id="@+id/PrincipalValueText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PrincipalValueText" >
                </TextView>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/TaxText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TaxText" >
                </TextView>

                <EditText
                    android:id="@+id/TaxEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:numeric="decimal" >
                </EditText>

                <TextView
                    android:id="@+id/InsuranceMonthText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/InsuranceMonthText" >
                </TextView>

                <TextView
                    android:id="@+id/InsuranceMonthValueText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/InsuranceMonthValueText" >
                </TextView>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/IRText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IRText" >
                </TextView>

                <EditText
                    android:id="@+id/IREditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="4.5"
                    android:imeOptions="actionNext"
                    android:numeric="decimal" >
                </EditText>

                <TextView
                    android:id="@+id/TaxesMonthText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TaxesMonthText" >
                </TextView>

                <TextView
                    android:id="@+id/TaxesMonthValueText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TaxesMonthValueText" >
                </TextView>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/HOAText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HOAText" >
                </TextView>

                <EditText
                    android:id="@+id/HOAEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:numeric="decimal" >
                </EditText>

                <TextView
                    android:id="@+id/TotalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalText" >
                </TextView>

                <TextView
                    android:id="@+id/TotalValueText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalValueText" >
                </TextView>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/InsuranceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/InsuranceText" >
                </TextView>

                <EditText
                    android:id="@+id/InsuranceEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:numeric="decimal" >
                </EditText>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/TermsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TermsText" >
                </TextView>

                <EditText
                    android:id="@+id/TermsEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numeric="integer" >
                </EditText>

                <Button
                    android:id="@+id/CalculateButton"
                    android:text="@string/CalculateButton"
                    android:textSize="20dip" >
                </Button>
            </TableRow>
            <!--
			<TableRow> <TextView android:id="@+id/InterestText"
			android:text="@string/InterestText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView> <TextView
			android:id="@+id/InterestValueText"
			android:text="@string/InterestValueText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView> </TableRow>
            -->
        </TableLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner_id" />
    <!--
         <com.amazon.device.ads.AdLayout android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    -->

</RelativeLayout>